--- a/public/styles/show-tweet.css
+++ b/public/styles/show-tweet.css
@@ -7,6 +7,7 @@
   padding: 1%;
   
 }
+
 .show-tweet:hover{
   box-shadow: 5px 10px #888888;
 }
@@ -27,10 +28,13 @@ h5 {
   justify-content: space-between;
   padding: 1%;
   margin: 1%; 
+  align-items: center;
+  
   
 }
 
 #login-name {
+  font-family: 'Source Sans Pro', sans-serif;
   color: rgb(205, 199, 199)
 }
 
@@ -56,4 +60,10 @@ article i:hover{
 
 .change-color{
   color: darkgoldenrod;
+}
+
+.username{
+  display: flex;
+  align-items: center;
+  font-family: 'Source Sans Pro', sans-serif;
 }
